--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width" />
 	<link rel="shortcut icon" href="http://theembassy.info/img/pearr.ico" />
 	<link href="css/style.css" rel="stylesheet" />
-	<title>Service 2.0</title>
+	<title>Pop Against Itself</title>
 </head>
 
 <body>
