--- a/index.html
+++ b/index.html
@@ -195,11 +195,11 @@
 				<li>
 					<a href="#"><img id="plus" class="nav" height=25 src="img/plus.png" /></a>
 					<div id="menu">
-						<img class="nav" height=25 src="img/diamant.png" />
-						<img class="nav" height=25 src="img/mail.png" />
-						<img class="nav" height=25 src="img/instagram.png" />
-						<img class="nav" height=25 src="img/apple.png" />
-						<img class="nav" height=25 src="img/spotify.png" />
+						<a href="#" target="_blank"><img class="nav" height=25 src="img/diamant.png" /></a>
+						<a href="#" target="_blank"><img class="nav" height=25 src="img/mail.png" /></a>
+						<a href="#" target="_blank"><img class="nav" height=25 src="img/instagram.png" /></a>
+						<a href="#" target="_blank"><img class="nav" height=25 src="img/apple.png" /></a>
+						<a href="#" target="_blank"><img class="nav" height=25 src="img/spotify.png" /></a>
 					</div>
 				</li>
 			</ul>
