--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 				<li>
 					<a href="#"><img id="plus" class="nav" height=25 src="img/plus.png" /></a>
 					<div id="menu">
-						<a href="#"><img class="nav" height=25 src="img/diamant.png" /></a>
+						<a href="http://srvc.tictail.com"><img class="nav" height=25 src="img/diamant.png" /></a>
 						<a href="#"><img class="nav" height=25 src="img/mail.png" /></a>
 						<a href="#"><img class="nav" height=25 src="img/instagram.png" /></a>
 						<a href="#"><img class="nav" height=25 src="img/apple.png" /></a>
