--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 					<a href="#"><img id="plus" class="nav" height=25 src="img/plus.png" /></a>
 					<div id="menu">
 						<a href="http://srvc.tictail.com" target="_blank"><img class="nav" height=25 src="img/diamant.png" /></a>
-						<a href="mailto:popagainstitself@gmail.com?Subject=Pop Against Itself" target="_top">Send Mail</a><img class="nav" height=25 src="img/mail.png" /></a>
+						<a href="mailto:popagainstitself@gmail.com?Subject=Pop Against Itself" target="_top"><img class="nav" height=25 src="img/mail.png" /></a>
 						<a href="#"><img class="nav" height=25 src="img/instagram.png" /></a>
 						<a href="#"><img class="nav" height=25 src="img/apple.png" /></a>
 						<a href="#"><img class="nav" height=25 src="img/spotify.png" /></a>
