--- a/index.html
+++ b/index.html
@@ -197,9 +197,10 @@
 					<div id="menu">
 						<a href="http://srvc.tictail.com" target="_blank"><img class="nav" height=25 src="img/diamant.png" /></a>
 						<a href="mailto:popagainstitself@gmail.com?Subject=Pop Against Itself" target="_top"><img class="nav" height=25 src="img/mail.png" /></a>
-						<a href="#"><img class="nav" height=25 src="img/instagram.png" /></a>
+						<a href="https://www.instagram.com/popagainstitself" target="_blank"><img class="nav" height=25 src="img/instagram.png" /></a>
 						<a href="#"><img class="nav" height=25 src="img/apple.png" /></a>
 						<a href="#"><img class="nav" height=25 src="img/spotify.png" /></a>
+						
 						
 					</div>
 				</li>
