--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="description" content="Newbuild" />
-	<meta name="keywords" content="euromix, unity, beats" />
+	<meta name="keywords" content="difference, repetition, melody" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="http://theembassy.info/img/pearr.ico" />
 	<title>Pop Against Itself</title>
