--- a/index.html
+++ b/index.html
@@ -7,178 +7,9 @@
 	<meta name="keywords" content="difference, repetition, melody" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="http://theembassy.info/img/pearr.ico" />
+	<link href="css/style1.css" rel="stylesheet" />
 	<title>Pop Against Itself</title>
 </head>
-
-<style>
-	* {
-		margin: 0;
-		padding: 0;
-	}
-
-	html {
-		height: 100%;
-	}
-
-	body {
-		background-color: #fff;
-		font: .8em/150% Arial, Helvetica, sans-serif;
-		color: #000;
-		font-weight: bold;
-		text-transform: uppercase;
-	}
-
-	a {
-		color: #000;
-		font-weight: bold;
-		text-transform: uppercase;
-		text-decoration: none;
-	}
-
-	a:hover {
-		color: #000;
-		font-weight: bold;
-		text-transform: uppercase;
-		text-decoration: none;
-	}
-
-	a:visited {
-		color: #000;
-		font-weight: bold;
-		text-transform: none;
-	}
-
-	h1 {
-		color: #000;
-		font: bolder 200% Helvetica, Sans-Serif;
-		line-height: 1.2;
-		letter-spacing: 0.03em;
-		padding-top: 10px;
-	}
-
-	#menu {
-		display: none;
-	}
-
-	#plus {
-		display: block;
-	}
-
-	img.nav {
-		margin: 10px 10px;
-	}
-
-
-	ul.nav {
-		list-style: none;
-		text-align: center;
-		position: fixed;
-		opacity: 0.8;
-		filter: alpha(opacity=80);
-		background-color: #fff;
-		/**adjust location**/
-		right: 0px;
-		bottom: 20px;
-		padding: 0;
-		width: 100%;
-	}
-
-	ul.nav li {
-		display: inline-block;
-		padding-top: 0px;
-		padding-bottom: 0px;
-		padding-right: 0px;
-		padding-left: 0px;
-		letter-spacing: 0.04em;
-	}
-
-	.wrapper {
-		width: 100%;
-		padding: 10px 0;
-	}
-
-	.container {
-		width: 600px;
-		margin: 0 auto;
-	}
-
-	/* ---------- Zoom container MAX ---------- */
-
-	.image-zoom-container-max {
-		list-style: none;
-		font-size: 0px;
-	}
-
-	.zoom-container-max {
-		position: relative;
-		overflow: hidden;
-		display: inline-block;
-		width: 100%;
-		/* this value + 2 should = 33% */
-		font-size: 12px;
-		vertical-align: top;
-		box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		-webkit-box-sizing: border-box;
-		border: 1px solid #fff;
-	}
-
-	.zoom-container-max img {
-		display: block;
-		width: 100%;
-		height: auto;
-	}
-
-	.zoom-container-max .zoom-caption {
-		position: absolute;
-		top: 50;
-		right: 0;
-		bottom: 0;
-		left: 0;
-		z-index: 10;
-	}
-
-	.zoom-container-max .zoom-caption h3 {
-		text-align: left;
-		font: 6em/150% Arial, Helvetica, sans-serif;
-		letter-spacing: 1px;
-		color: #84bac8;
-		margin: 5% 5% 0;
-		padding: 0px 0;
-	}
-
-	.zoom-container-max:hover h3 {
-		display: block;
-		color: #84bac8;
-	}
-
-	.zoom-container-max:hover img {
-		opacity: 1;
-	}
-
-	@media (max-width: 600px) {
-		.container {
-			width: auto;
-			padding: 0px 10px 0px 10px;
-		}
-	}
-
-	@media (max-width: 600px) {
-		.container {
-			width: auto;
-			padding: 0px 10px 0px 10px;
-		}
-	}
-
-	@media (max-width: 480px) {
-		.container {
-			width: auto;
-			padding: 0px 10px 0px 10px;
-		}
-	}
-</style>
-
-
 
 <body>
 	<div class="wrapper">
@@ -190,18 +21,18 @@
 				</div>
 			</div>
 
-			<ul class="nav">
-				<h1>Pop Against Itself</h1>
+			<ul class="nav-bottom">
+				<h2>Pop Against Itself</h2>
 				<li>
-					<a href="#"><img id="plus" class="nav" height=25 src="img/plus.png" /></a>
+					<a href="#"><img id="plus" class="nav-bottom" height=20 src="img/plus.png" /></a>
 					<div id="menu">
-						<a href="http://srvc.tictail.com" target="_blank"><img class="nav" height=25 src="img/diamant.png" /></a>
-						<a href="mailto:popagainstitself@gmail.com?Subject=Pop Against Itself" target="_top"><img class="nav" height=25 src="img/mail.png" /></a>
-						<a href="https://www.instagram.com/popagainstitself" target="_blank"><img class="nav" height=25 src="img/instagram.png" /></a>
-						<a href="#"><img class="nav" height=25 src="img/apple.png" /></a>
-						<a href="#"><img class="nav" height=25 src="img/spotify.png" /></a>
-						
-						
+						<a href="http://srvc.tictail.com" target="_blank"><img class="nav-bottom" height=20 src="img/diamant.png" /></a>
+						<a href="mailto:popagainstitself@gmail.com?Subject=Pop Against Itself" target="_top"><img class="nav-bottom" height=20 src="img/mail.png" /></a>
+						<a href="https://www.instagram.com/popagainstitself" target="_blank"><img class="nav-bottom" height=20 src="img/instagram.png" /></a>
+						<a href="#"><img class="nav-bottom" height=20 src="img/apple.png" /></a>
+						<a href="#"><img class="nav-bottom" height=20 src="img/spotify.png" /></a>
+
+
 					</div>
 				</li>
 			</ul>
@@ -214,7 +45,6 @@
 		if (x.addEventListener) {
 			x.addEventListener("click", myFunction);
 		}
-
 		function myFunction() {
 			document.getElementById("menu").style.display = "block";
 			document.getElementById("plus").style.display = "none";
