--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 			<div class="image-zoom-container-max">
 				<div class="zoom-container-max">
-					<img src="img/bloody-noise.jpg" />
+					<img src="img/bkg.jpg" />
 				</div>
 			</div>
 
