--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<a href="https://www.instagram.com/popagainstitself" target="_blank"><img class="nav-bottom" height=20 src="img/instagram.png" /></a>
 						<a href="#"><img class="nav-bottom" height=20 src="img/apple.png" /></a>
 						<a href="#"><img class="nav-bottom" height=20 src="img/spotify.png" /></a>
-						<a href="#"><img class="navnav-bottom" height=20 src="img/shop.png" /></a>
+						<a href="#"><img class="nav-bottom" height=20 src="img/shop.png" /></a>
 					</div>
 				</li>
 			</ul>
