--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="difference, repetition, melody" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="http://theembassy.info/img/pearr.ico" />
-	<link href="css/style1.css" rel="stylesheet" />
+	<link href="css/style3.css" rel="stylesheet" />
 	<title>Pop Against Itself</title>
 </head>
 
@@ -21,23 +21,24 @@
 				</div>
 			</div>
 
-			<ul class="nav-bottom">
-				<hr>
-				<h2>Pop Against Itself</h2>
-				<li>
-					<a href="#"><img id="plus" class="nav-bottom" height=20 src="img/plus.png" /></a>
-					<div id="menu">
-						<a href="http://srvc.tictail.com" target="_blank"><img class="nav-bottom" height=20 src="img/diamant.png" /></a>
-						<a href="mailto:popagainstitself@gmail.com?Subject=Pop Against Itself" target="_top"><img class="nav-bottom" height=20 src="img/mail.png" /></a>
-						<a href="https://www.instagram.com/popagainstitself" target="_blank"><img class="nav-bottom" height=20 src="img/instagram.png" /></a>
-						<a href="#"><img class="nav-bottom" height=20 src="img/apple.png" /></a>
-						<a href="#"><img class="nav-bottom" height=20 src="img/spotify.png" /></a>
-						<a href="#"><img class="nav-bottom" height=20 src="img/shop.png" /></a>
-					</div>
-				</li>
-			</ul>
-
 		</div>
+	</div>
+
+	<div class="footer">
+		<ul class="nav">
+			<h2>Pop Against Itself</h2>
+			<li>
+				<a href="#"><img id="plus" class="nav" height=20 src="img/plus.png" /></a>
+				<div id="menu">
+					<a href="http://srvc.tictail.com" target="_blank"><img class="nav" height=20 src="img/diamant.png" /></a>
+					<a href="mailto:popagainstitself@gmail.com?Subject=Pop Against Itself" target="_top"><img class="nav" height=20 src="img/mail.png" /></a>
+					<a href="https://www.instagram.com/popagainstitself" target="_blank"><img class="nav" height=20 src="img/instagram.png" /></a>
+					<a href="#"><img class="nav" height=20 src="img/apple.png" /></a>
+					<a href="#"><img class="nav" height=20 src="img/spotify.png" /></a>
+					<a href="#"><img class="nav" height=20 src="img/shop.png" /></a>
+				</div>
+			</li>
+		</ul>
 	</div>
 
 	<script>
@@ -45,6 +46,7 @@
 		if (x.addEventListener) {
 			x.addEventListener("click", myFunction);
 		}
+
 		function myFunction() {
 			document.getElementById("menu").style.display = "block";
 			document.getElementById("plus").style.display = "none";
