--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="difference, repetition, melody" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="http://theembassy.info/img/pearr.ico" />
-	<link href="css/style3.css" rel="stylesheet" />
+	<link href="css/style.css" rel="stylesheet" />
 	<title>Pop Against Itself</title>
 </head>
 
