--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="difference, repetition, melody" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="http://theembassy.info/img/pearr.ico" />
-	<link href="css/style.css" rel="stylesheet" />
+	<link href="css/style3.css" rel="stylesheet" />
 	<title>Pop Against Itself</title>
 </head>
 
@@ -19,11 +19,15 @@
 				<div class="zoom-container-max">
 
 					<div class="mySlides1">
-						<a href="#" onclick="plusSlides(1, 0)"><img src="img/bkg.jpg"></a>
+						<a href="#" onclick="plusSlides(1, 0)"><img src="img/sany1.gif"></a>
 					</div>
 
 					<div class="mySlides1">
-						<a href="#" onclick="plusSlides(1, 0)"><img src="img/bkg1.jpg"></a>
+						<a href="#" onclick="plusSlides(1, 0)"><img src="img/sany2.jpg"></a>
+					</div>
+
+					<div class="mySlides1">
+						<a href="#" onclick="plusSlides(1, 0)"><img src="img/sany3.jpg"></a>
 					</div>
 
 				</div>
