--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="zoom-container-max">
 
 					<div class="mySlides1">
-						<a href="#" onclick="plusSlides(1, 0)"><img src="img/sany1.gif"></a>
+						<img src="img/sany1.gif">
 					</div>
 
 				</div>
