--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 				<a href="#"><img id="plus" class="nav" height=20 src="img/plus.png" /></a>
 				<div id="menu">
 					<a href="http://srvc.tictail.com" target="_blank"><img class="nav" height=20 src="img/diamant.png" /></a>
-					<a href="mailto:popagainstitself@gmail.com?Subject=Pop Against Itself" target="_top"><img class="nav" height=20 src="img/mail.png" /></a>
-					<a href="https://signup.ymlp.com/xgqmjbuhgmgj" target="_blank"><img class="nav" height=20 src="img/mlist.png" /></a>
+					<a href="mailto:popagainstitself@gmail.com?Subject=This is what I want to say:" target="_top"><img class="nav" height=20 src="img/mlist" /></a>
 					<a href="https://www.instagram.com/popagainstitself" target="_blank"><img class="nav" height=20 src="img/instagram.png" /></a>
 					<a href="#"><img class="nav" height=20 src="img/apple.png" /></a>
 					<a href="#"><img class="nav" height=20 src="img/spotify.png" /></a>
