--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 	<div class="footer">
 		<ul class="nav">
-			<h2>Pop Against Itself</h2>
+			<li><img src="img/logo.jpg" width=250></li><br>
 			<li>
 				<a href="#"><img id="plus" class="nav" height=20 src="img/plus.png" /></a>
 				<div id="menu">
