--- a/index.html
+++ b/index.html
@@ -22,27 +22,33 @@
 						<img src="img/sany1.gif">
 					</div>
 
+					<div class="mySlides1">
+						<img src="img/sany3.jpg">
+					</div>
+
 				</div>
 			</div>
 
-		</div>
-	</div>
 
-	<div class="footer">
-		<ul class="nav">
-			<li><img src="img/logo.jpg" width=250></li><br>
-			<li>
-				<a href="#"><img id="plus" class="nav" height=20 src="img/plus.png" /></a>
-				<div id="menu">
-					<a href="http://srvc.tictail.com" target="_blank"><img class="nav" height=20 src="img/diamant.png" /></a>
-					<a href="mailto:popagainstitself@icloud.com?Subject=This is what I want to say:" target="_top"><img class="nav" height=20 src="img/mail.png" /></a>
-					<a href="https://signup.ymlp.com/xgqmjbuhgmgw" target="_blank"><img class="nav" height=20 src="img/maillist.png" /></a>
-					<a href="https://www.instagram.com/popagainstitself" target="_blank"><img class="nav" height=20 src="img/instagram.png" /></a>
-					<a href="#"><img class="nav" height=20 src="img/apple.png" /></a>
-					<a href="#"><img class="nav" height=20 src="img/spotify.png" /></a>
-				</div>
-			</li>
-		</ul>
+			<div class="footer">
+				<ul class="nav">
+						<li>	<a href="#" onclick="plusSlides(1, 0)"><img src="img/logo.jpg" width=250></a></li><br>
+					<li>
+						<a href="#"><img id="plus" class="nav" height=20 src="img/plus.png" /></a>
+						<div id="menu">
+							<a href="http://srvc.tictail.com" target="_blank"><img class="nav" height=20 src="img/diamant.png" /></a>
+							<a href="mailto:popagainstitself@gmail.com?Subject=Pop Against Itself" target="_top"><img class="nav" height=20 src="img/mail.png" /></a>
+							<a href="https://signup.ymlp.com/xgqmjbuhgmgj" target="_blank"><img class="nav" height=20 src="img/mlist.png" /></a>
+							<a href="https://www.instagram.com/popagainstitself" target="_blank"><img class="nav" height=20 src="img/instagram.png" /></a>
+							<a href="#"><img class="nav" height=20 src="img/apple.png" /></a>
+							<a href="#"><img class="nav" height=20 src="img/spotify.png" /></a>
+							<a href="#"><img class="nav" height=20 src="img/shop.png" /></a>
+						</div>
+					</li>
+				</ul>
+			</div>
+
+		</div>
 	</div>
 
 	<script>
