--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 			<div class="footer">
 				<ul class="nav">
-						<li>	<a href="#" onclick="plusSlides(1, 0)"><img src="img/logo.jpg" width=250></a></li><br>
+						<li>	<a href="#" onclick="plusSlides(1, 0)"><img src="img/namn.jpg" width=250></a></li><br>
 					<li>
 						<a href="#"><img id="plus" class="nav" height=20 src="img/plus.png" /></a>
 						<div id="menu">
