--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					</div>
 
 					<div class="mySlides1">
-						<img src="img/sany3.jpg">
+						<img src="img/logo.jpg">
 					</div>
 
 				</div>
