--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 							<a href="#"><img class="nav" height=20 src="img/spotify.png" /></a>
 							<a href="#"><img class="nav" height=20 src="img/apple.png" /></a>
 							<a href="#"><img class="nav" height=20 src="img/shop.png" /></a>
+							<a href="#"><img class="nav" height=20 src="img/shirt.png" /></a>
 						</div>
 					</li>
 				</ul>
