--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					</div>
 
 					<div class="mySlides1">
-						<img src="img/logo.jpg">
+						<a href="https://www.instagram.com/popagainstitself" target="_blank"><img src="img/logo.jpg"></a>
 					</div>
 
 				</div>
