--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 							<a href="https://signup.ymlp.com/xgqmjbuhgmgj" target="_blank"><img class="nav" height=20 src="img/mail.png" /></a>
 							<a href="mailto:popagainstitself@gmail.com?Subject=Pop Against Itself" target="_top"><img class="nav" height=20 src="img/maillist.png" /></a>
 							<a href="https://www.instagram.com/popagainstitself" target="_blank"><img class="nav" height=20 src="img/instagram.png" /></a>
-							<a href="#"><img class="nav" height=20 src="img/spotify.png" /></a>
-							<a href="#"><img class="nav" height=20 src="img/apple.png" /></a>
+							<a href="https://open.spotify.com/album/5QxhS8gbbjwdZykhpByS76" target="_blank"><img class="nav" height=20 src="img/spotify.png" /></a>
+							<a href="https://itunes.apple.com/us/artist/the-embassy/119408402" target="_blank"><img class="nav" height=20 src="img/apple.png" /></a>
 							<a href="https://tictail.com/popagainstitself" target="_blank"><img class="nav" height=20 src="img/shop.png" /></a>
 						</div>
 					</li>
