--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<a href="#"><img id="plus" class="nav" height=20 src="img/plus.png" /></a>
 						<div id="menu">
 							<a href="http://srvc.tictail.com" target="_blank"><img class="nav" height=20 src="img/diamant.png" /></a>
-							<a href="https://signup.ymlp.com/xgqmjbuhgmgj" target="_blank"><img class="nav" height=20 src="img/mail.png" /></a>
+							<a href="https://signup.ymlp.com/xgqmjbuhgmgw" target="_blank"><img class="nav" height=20 src="img/mail.png" /></a>
 							<a href="mailto:popagainstitself@gmail.com?Subject=Pop Against Itself" target="_top"><img class="nav" height=20 src="img/maillist.png" /></a>
 							<a href="https://www.instagram.com/popagainstitself" target="_blank"><img class="nav" height=20 src="img/instagram.png" /></a>
 							<a href="https://open.spotify.com/album/5QxhS8gbbjwdZykhpByS76" target="_blank"><img class="nav" height=20 src="img/spotify.png" /></a>
@@ -88,7 +88,7 @@
 			x[slideIndex[no] - 1].style.display = "block";
 		}
 	</script>
-
+	
 </body>
 
 </html>
