--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<div id="menu">
 							<a href="http://srvc.tictail.com" target="_blank"><img class="nav" height=20 src="img/diamant.png" /></a>
 							<!-- <a href="https://signup.ymlp.com/xgqmjbuhgmgw" target="_blank"><img class="nav" height=20 src="img/maillist.png" /></a> -->
-							<a href="mailto:popagainstitself@gmail.com?Subject=Pop Against Itself" target="_top"><img class="nav" height=20 src="img/mail.png" /></a>
+							<a href="mailto:popagainstitself@gmail.com?Subject=What I want to say:" target="_top"><img class="nav" height=20 src="img/mail.png" /></a>
 							<a href="https://www.instagram.com/popagainstitself" target="_blank"><img class="nav" height=20 src="img/instagram.png" /></a>
 							<a href="https://open.spotify.com/album/5QxhS8gbbjwdZykhpByS76" target="_blank"><img class="nav" height=20 src="img/spotify.png" /></a>
 							<a href="https://itunes.apple.com/us/artist/the-embassy/119408402" target="_blank"><img class="nav" height=20 src="img/apple.png" /></a>
