--- a/shop/index.html
+++ b/shop/index.html
@@ -4,7 +4,7 @@
 
 <script>
 function myFunction() {
-    window.location.replace("http://srvc.tictail.com");
+    window.location.replace("https://tictail.com/popagainstitself");
 }
 </script>
 
