--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 					<li>
 						<a href="#"><img id="plus" class="nav" height=20 src="img/plus.png" /></a>
 						<div id="menu">
-							<!--<a href="http://srvc.tictail.com" target="_blank"><img class="nav" height=20 src="img/diamant.png" /></a> -->
+							<a href="https://www.discogs.com/label/38025-Service?sort=year&sort_order=" target="_blank"><img class="nav" height=20 src="img/diamant.png" /></a>
 							<!-- <a href="https://signup.ymlp.com/xgqmjbuhgmgw" target="_blank"><img class="nav" height=20 src="img/maillist.png" /></a> -->
-							<a href="mailto:darya.dastgheib@gmail.com?Subject=What I want to say:" target="_top"><img class="nav" height=20 src="img/mail.png" /></a>
+							<a href="mailto:info@popagainstitself.com?Subject=What I want to say:" target="_top"><img class="nav" height=20 src="img/mail.png" /></a>
 							<a href="https://www.instagram.com/popagainstitself" target="_blank"><img class="nav" height=20 src="img/instagram.png" /></a>
-							<a href="https://open.spotify.com/artist/2oyNl6Ds6rY648mcUFhVgT?si=BzzSX8vSQSu6PIb3XyNdaw" target="_blank"><img class="nav" height=20 src="img/spotify.png" /></a>
-							<a href="https://itunes.apple.com/se/album/white-lake/1437889912" target="_blank"><img class="nav" height=20 src="img/apple.png" /></a>
-							<a href="shop/" target="_blank"><img class="nav" height=20 src="img/shop.png" /></a>
+							<!-- <a href="https://open.spotify.com/artist/2oyNl6Ds6rY648mcUFhVgT?si=BzzSX8vSQSu6PIb3XyNdaw" target="_blank"><img class="nav" height=20 src="img/spotify.png" /></a> -->
+							<!-- <a href="https://itunes.apple.com/se/album/white-lake/1437889912" target="_blank"><img class="nav" height=20 src="img/apple.png" /></a> -->
+							<!-- <a href="shop/" target="_blank"><img class="nav" height=20 src="img/shop.png" /></a> -->
 						</div>
 					</li>
 				</ul>
