--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 				<div class="zoom-container-max">
 
 					<div class="mySlides1">
-						<img src="img/sany1.gif">
+						<img src="img/logo.jpg">
 					</div>
 
 					<div class="mySlides1">
-						<a href="https://www.instagram.com/popagainstitself" target="_blank"><img src="img/logo.jpg"></a>
+						<a href="https://www.instagram.com/popagainstitself" target="_blank"><img src="img/sany1.gif"></a>
 					</div>
 
 				</div>
