--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					</div>
 
 					<div class="mySlides1">
-						<a href="https://www.instagram.com/popagainstitself" target="_blank"><img src="img/sany1.gif.jpg"></a>
+						<a href="https://www.instagram.com/popagainstitself" target="_blank"><img src="img/sany1.gif"></a>
 					</div>
 
 				</div>
