--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="zoom-container-max">
 
 					<div class="mySlides1">
-						<a href="https://popagainstitself.com/#" target="_blank"><img src="img/logo.jpg">
+						<img src="img/logo.jpg">
 					</div>
 
 					<div class="mySlides1">
