--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<a href="https://www.instagram.com/popagainstitself" target="_blank"><img class="nav" height=20 src="img/instagram.png" /></a>
 							<!-- <a href="https://open.spotify.com/artist/2oyNl6Ds6rY648mcUFhVgT?si=BzzSX8vSQSu6PIb3XyNdaw" target="_blank"><img class="nav" height=20 src="img/spotify.png" /></a> -->
 							<!-- <a href="https://itunes.apple.com/se/album/white-lake/1437889912" target="_blank"><img class="nav" height=20 src="img/apple.png" /></a> -->
-							<!-- <a href="shop/" target="_blank"><img class="nav" height=20 src="img/shop.png" /></a> -->
+							<a href="shop/" target="_blank"><img class="nav" height=20 src="img/shop.png" /></a>
 						</div>
 					</li>
 				</ul>
