--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 				<div class="zoom-container-max">
 
 					<div class="mySlides1">
-						<img src="img/logo.jpg">
+							<a href="#" onclick="plusSlides(1, 0)"><img src="img/logo.jpg"></a>
 					</div>
 
 					<div class="mySlides1">
-						<a href="https://www.instagram.com/popagainstitself" target="_blank"><img src="img/sany1.gif"></a>
+							<a href="#" onclick="plusSlides(1, 0)"><img src="img/sany1.gif"></a>
 					</div>
 
 				</div>
@@ -32,7 +32,7 @@
 
 			<div class="footer">
 				<ul class="nav">
-						<li>	<a href="#" onclick="plusSlides(1, 0)"><img src="img/namn.jpg" width=250></a></li><br>
+						<li><a href="#" onclick="plusSlides(1, 0)"><img src="img/namn.jpg" width=250></a></li><br>
 					<li>
 						<a href="#"><img id="plus" class="nav" height=20 src="img/plus.png" /></a>
 						<div id="menu">
@@ -42,7 +42,7 @@
 							<a href="https://www.instagram.com/popagainstitself" target="_blank"><img class="nav" height=20 src="img/instagram.png" /></a>
 							<!-- <a href="https://open.spotify.com/artist/2oyNl6Ds6rY648mcUFhVgT?si=BzzSX8vSQSu6PIb3XyNdaw" target="_blank"><img class="nav" height=20 src="img/spotify.png" /></a> -->
 							<!-- <a href="https://itunes.apple.com/se/album/white-lake/1437889912" target="_blank"><img class="nav" height=20 src="img/apple.png" /></a> -->
-							<a href="shop/" target="_blank"><img class="nav" height=20 src="img/shop.png" /></a>
+							<a href="https://shop.dream-on.se" target="_blank"><img class="nav" height=20 src="img/shop.png" /></a>
 						</div>
 					</li>
 				</ul>
@@ -88,7 +88,7 @@
 			x[slideIndex[no] - 1].style.display = "block";
 		}
 	</script>
-	
+
 </body>
 
 </html>
