--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<li>
 						<a href="#"><img id="plus" class="nav" height=20 src="img/plus.png" /></a>
 						<div id="menu">
-							<a href="https://publicservice.info" target="_blank"><img class="nav" height=20 src="img/diamant.png" /></a>
+							<a href="https://servicegbg.com" target="_blank"><img class="nav" height=20 src="img/diamant.png" /></a>
 							<!-- <a href="https://signup.ymlp.com/xgqmjbuhgmgw" target="_blank"><img class="nav" height=20 src="img/maillist.png" /></a> -->
 							<!-- <a href="mailto:popagainstitself@gmail.com?Subject=What I want to say:" target="_top"><img class="nav" height=20 src="img/mail.png" /></a> -->
 							<a href="https://www.instagram.com/popagainstitself" target="_blank"><img class="nav" height=20 src="img/instagram.png" /></a>
